erDiagram

    LOCALISATION {
        int id PK
        string ville
        string slug
        string adresse
        string codePostal
        text description
        string telephone
        string email
        datetime createdAt
        datetime updatedAt
    }

    APPARTEMENT {
        int id PK
        int localisation_id FK
        string nom
        string slug
        string type
        int surface
        int capaciteMin
        int capaciteMax
        text description
        text equipements
        string imagePrincipale
        text galerie
        decimal prixParNuit
        boolean actif
        int ordre
    }

    RESERVATION {
        int id PK
        int appartement_id FK
        int user_id FK
        string nom
        string prenom
        string email
        string telephone
        date dateArrivee
        date dateDepart
        int nombrePersonnes
        text message
        string statut
        datetime createdAt
    }

    TEMOIGNAGE {
        int id PK
        int user_id FK
        string auteur
        text contenu
        int note
        string avatar
        boolean actif
        datetime createdAt
    }

    USER {
        int id PK
        string email UK
        json roles
        string password
    }

    %% Relations avec cardinalités

    LOCALISATION ||--o{ APPARTEMENT : "1,n possède"
    APPARTEMENT ||--o{ RESERVATION : "1,n reçoit"
    USER ||--o{ RESERVATION : "1,n effectue"
    USER ||--o{ TEMOIGNAGE : "1,n rédige"